# fastkernels

./: .gitignore  AGENTS.md  README.md  pyproject.toml
bench/: modal_qwen36_decode.py  modal_qwen36_full_serving.py  modal_qwen36_vllm_serving.py  moe_microbench.py  qwen35_profile.py  qwen36_batched_real_moe_microbench.py  qwen36_batched_routed_moe_microbench.py  qwen36_decode_reference.py  qwen36_expert_microbench.py  qwen36_full_decode.py  qwen36_full_weight_plan.py  qwen36_layer_microbench.py  qwen36_moe_topk_microbench.py  qwen36_real_moe_microbench.py  qwen36_real_weight_block_smoke.py  qwen36_real_weight_key_probe.py  qwen36_real_weight_moe_smoke.py  qwen36_routed_moe_microbench.py  qwen36_router_microbench.py  qwen36_safetensor_moe_smoke.py  qwen36_vllm_moe_compare.py  qwen36_vllm_serving_benchmark.py
docs/: LAMBDA.md  QWEN35_KERNEL_PLAN.md  QWEN36_MEGAKERNEL_PLAN.md  codex-handoff.md  current-plan.md  megakernel-building-process.md  modal.md
notebooks/: colab_kernel_test.ipynb
src/fastkernels/: __init__.py
src/fastkernels/kernels/: __init__.py
src/fastkernels/kernels/triton/: __init__.py  moe.py  qwen36_attention.py  qwen36_deltanet.py  qwen36_expert.py  qwen36_layer.py  qwen36_moe.py  qwen36_router.py
src/fastkernels/models/: __init__.py  qwen35.py  qwen36.py  qwen36_full.py  qwen36_weights.py
src/fastkernels/reference/: __init__.py  moe.py  qwen36_decode.py  qwen36_real.py
src/fastkernels/testing/: __init__.py  tolerances.py
tests/: test_qwen35_spec.py  test_qwen36_decode.py  test_qwen36_spec.py  test_tolerances.py  test_triton_moe.py
