[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastkernels"
version = "0.0.1"
description = "Fast kernel utilities for Python."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "fastkernels contributors" }
]
keywords = ["kernels", "performance"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
bench = ["torch>=2.4"]
triton = ["torch>=2.4", "triton>=3.0; platform_system == 'Linux'"]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/suryavanshi/fastkernels"
Repository = "https://github.com/suryavanshi/fastkernels"

[tool.setuptools.packages.find]
where = ["src"]
